# qiaopcmusic

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: CutActivity.java  MainActivity.java  MyGLSurfaceView.java  MyRender.java  MyShaderUtil.java
app/src/main/res/layout/: activity_cutaudio.xml  activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
qiaopcplayer/: CMakeLists.txt  build.gradle
qiaopcplayer/src/androidTest/java/com/example/qiaopcplayer/: ExampleInstrumentedTest.java
qiaopcplayer/src/main/: AndroidManifest.xml
qiaopcplayer/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  MyAudio.cpp  MyAudio.h  MyBufferQueue.cpp  MyBufferQueue.h  MyFFmepg.cpp  MyFFmepg.h  MyPcmBean.cpp  MyPcmBean.h  MyQueue.cpp  MyQueue.h  MyVideo.cpp  MyVideo.h  Playstatus.cpp  Playstatus.h  native-lib.cpp
qiaopcplayer/src/main/cpp/soundtouch/include/: STTypes.h
qiaopcplayer/src/main/java/com/example/qiaopcplayer/: Demo.java  TimeInfoBean.java
qiaopcplayer/src/main/java/com/example/qiaopcplayer/listener/: OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPauseResumeListener.java  OnPcmInfoListener.java  OnPreparedListener.java  OnRecordTimeListener.java  OnTimeInfoListener.java  OnValumeDBListener.java
qiaopcplayer/src/main/java/com/example/qiaopcplayer/log/: MyLog.java
qiaopcplayer/src/main/java/com/example/qiaopcplayer/muteenum/: MuteEnum.java
qiaopcplayer/src/main/java/com/example/qiaopcplayer/player/: QiaopcPlayer.java
qiaopcplayer/src/main/java/com/example/qiaopcplayer/util/: TimeUtil.java
qiaopcplayer/src/main/res/values/: strings.xml
qiaopcplayer/src/test/java/com/example/qiaopcplayer/: ExampleUnitTest.java
